--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Fu Manchu, Doctor (Fictitious character) -- Fiction'
 - !lcsh 'Detective and mystery stories'
+- GITenberg
 title: "The Hand of Fu-Manchu\r\nBeing a New Phase in the Activities of Fu-Manchu,\
   \ the Devil Doctor"
 url: http://www.gutenberg.org/ebooks/17959
